--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "utils/vars";
+
 @import "components/header";
 @import "components/hero";
 @import "components/advanteges";
@@ -11,3 +12,4 @@
 @import "components/portfolio-filters";
 @import "components/portfolio-grid";
 @import "components/portfolio-overlay-card";
+@import "components/menu-togle";
