--- a/sass/components/_advanteges.scss
+++ b/sass/components/_advanteges.scss
@@ -1,35 +1,41 @@
 @import "../utils/vars";
 .advanteges {
-  display: flex;
-  margin: 0 auto;
-  padding: 0 15px;
-  justify-content: space-between;
-
   &__box-icon {
-    width: 270px;
-    height: 120px;
-    padding: 25px 100px;
-    margin-bottom: 30px;
     background-color: $background-color-button;
+    width: 100%;
+    height: 120px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 }
 
 .advanteges__info {
-  max-width: 270px;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
   & h4 {
     margin: 0;
     padding-bottom: 10px;
   }
 }
-
+.advanteges__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 120px;
+  margin-bottom: 30px;
+  pointer-events: none;
+}
 .advanteges__text {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
-  margin: 0;
+  text-align: start;
+  margin-bottom: 30px;
 
   &-title {
     font-weight: 700;
@@ -37,5 +43,51 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    text-align: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .advanteges {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 30px;
+  }
+  .advanteges__info {
+    width: 354px;
+  }
+  .advanteges__box-icon {
+    width: 354px;
+    height: 120px;
+  }
+  .advanteges__text {
+    width: 354px;
+    height: 75px;
+  }
+  .advanteges__text-title {
+    width: 354px;
+    text-align: left;
+  }
+}
+@media (min-width: 1200px) {
+  .advanteges {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .advanteges__info {
+    width: 270px;
+  }
+  .advanteges__box-icon {
+    width: 270px;
+  }
+  .advanteges__text {
+    width: 270px;
+    height: 75px;
+  }
+  .advanteges__text-title {
+    width: 270px;
+    text-align: left;
   }
 }
