--- a/sass/components/_form-footer.scss
+++ b/sass/components/_form-footer.scss
@@ -1,7 +1,7 @@
 @import "../utils/vars";
 
 .form {
-  margin-left: 78px;
+  width: 100%;
 
   &__foot-text {
     font-weight: 700;
@@ -10,6 +10,7 @@
     text-transform: uppercase;
     color: $text-button;
     margin-bottom: 20px;
+    text-align: center;
   }
 
   &__email-footer {
@@ -18,17 +19,27 @@
     color: $text-color-form;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
-    width: 358px;
+
     height: 50px;
     padding: 15px 16px;
-    margin-right: 12px;
+
     background-color: var(--background-color);
   }
 }
-
-.form__footer {
-  display: flex;
+@media (max-width: 1199px) {
+  .form__footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+  }
+  .form__email-footer {
+    width: 100%;
+  }
 }
+
 .form__btn-foot {
   display: flex;
   justify-content: space-between;
@@ -52,5 +63,13 @@
   &:focus {
     background-color: $Selection-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .form {
+    width: 450px;
+    margin-top: 60px;
+    margin-left: 46px;
   }
 }
