--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,34 +1,49 @@
 @import "../utils/vars";
 .hero {
-  max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin: 0 auto;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.3),
       rgba(47, 48, 58, 0.3)
     ),
-    url("../images/img10.jpg");
+    url("../images/img@1x480.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.3),
+          rgba(47, 48, 58, 0.3)
+        ),
+        url("../image/img@2x480.jpg");
+    }
+  }
 
   &__head-btn {
     display: flex;
     text-align: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 
   &__headline {
     color: $text-button;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 30px;
     letter-spacing: 0.06em;
-    width: 696px;
+    width: 100%;
   }
 }
 
@@ -45,5 +60,69 @@
   &:focus {
     background-color: $Selection-color;
     color: $text-button;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.3),
+        rgba(47, 48, 58, 0.3)
+      ),
+      url("../images/img@1x768.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .hero {
+        background-image: linear-gradient(
+            to right,
+            rgba(47, 48, 58, 0.3),
+            rgba(47, 48, 58, 0.3)
+          ),
+          url("../image/img@2x768.jpg");
+      }
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.3),
+        rgba(47, 48, 58, 0.3)
+      ),
+      url("../images/img@1x1200.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    max-width: 1600px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .hero {
+        background-image: linear-gradient(
+            to right,
+            rgba(47, 48, 58, 0.3),
+            rgba(47, 48, 58, 0.3)
+          ),
+          url("../image/img@2x1200.jpg");
+      }
+    }
+
+    &__headline {
+      font-size: 44px;
+      line-height: 1.36;
+    }
+    &__head-btn {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
   }
 }
