--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -29,6 +29,25 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
 a {
   text-decoration: none;
   font-style: normal;
@@ -42,6 +61,7 @@ ul {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 button {
   border: none;
@@ -51,4 +71,9 @@ button {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
